added code to blog 0
added to blog 0

--- a/_posts/2021-10-07-blog-post-0.md
+++ b/_posts/2021-10-07-blog-post-0.md
@@ -2,7 +2,7 @@
 layout: post
 title: Week 0 Blog Post
 ---
-
+### Introduction
 For this week's post, our goal is to write a tutorial explaining how to construct an interesting data visualization of the given Palmer Penguins dataset. 
 
 We'll first read in our data:
@@ -14,4 +14,90 @@ penguins.head()
 ```
 Here, we observe that there are multiple species within the `penguins` dataset. Therefore, it would be interesting to observe the distribution differences between the three species, Adelie, Gentoo, and Chinstrap penguins. 
 
+Before that, let's load in our packages!
+
+```python
+import urllib
+from matplotlib import pyplot as plt
+import numpy as np
+```
+
+### Preliminary Cleaning
+We can first proceed by creating a function `clean()` that helps clean up our data frame by removing unnecessary columns via `np.drop()`, as well as getting rid of row entries with `NaN` values in the quantitative sections. We have to remove a single outlier in the `Sex` column because it is nonsensical (there is no registered Sex as `.` to my knowledge), and we want to simplify the species names by taking only the first part of the text, which we do through `str.split()`.
+
+```python
+def clean(df):
+    """
+    Using this to clean up the data frame, get rid of rows with NaN values, categorize labels, etc.
+    Also to simplify the naming of the species. 
+    """
+    #get rid of trivial column variables and ridding useless rows
+    df = df.drop(['Comments','Sample Number' ,'Date Egg', 'Clutch Completion', 'Individual ID'
+                          ,'studyName','Stage', 'Region'], axis =1) #get rid of trivial columns
+    df = df.dropna() #rid of NaN rows
+    
+    df = df[df.Sex != "." ] #omit outlier
+    df["Species"] = df["Species"].str.split(" ", n= 1, expand = True)[0] #simplify species name
+
+    return df  
+```
+Then, we execute it on our data:
+
+```python
+penguins = clean(penguins) #clean data
+penguins.head()
+```
+Notice that we have csimpler species names and only columns we want to investigate!
+
+### Histogram: Sex
+
+For our first categorical bar chart, we want to measure frequencies of sex per penguin species. Since we want to make a bi-layer comparison boty *by species and by sex*, we use `multiple = 'dodge'` in seaborn's `histplot()` so it is more interpretable than stacking, as well as overlapping each other. `shrink` is used so the bar plot horizontal components are smaller and clearer aesthetically. 
+
+```python
+import seaborn as sns 
+sns.histplot(data = penguins, x = "Sex", hue = "Species", multiple="dodge", shrink = 0.8)
+```
+Observe that the distributions *within* each species are balanced, but there are more Adelie penguins than Gentoo and Chinstrap. 
+
+### Histogram: Islands
+
+In this case, we want to measure frequencies in each penguin species for the islands they inhabit. I opted to use `stack` tto stack frequencies because I wanted to know the final counts of penguins per island. Therefore, using a stack method for `histplot()` works better, with our `x = Island`, and our hue or frame of reference being `hue = Species`.  
+
+```python
+sns.histplot(data = penguins, x = "Island", hue = "Species", multiple = "stack",  shrink = 0.8)
+```
+
+### Discrete and Continuous Covariates
+
+Now, we want to visualize the numerical covariates. This may show us some insight in any noticeable differences in the flipper size, mass, culmen depth and length, as well as the isotope concentration (Nitrogen-15 and Carbon-13). We can do this first by dropping the `Sex` column and use the `groupby()` function with our key being `Species`, and then using `aggregate()` concurrently with `np.mean()` and `np.var()`. 
+
+```python
+penguins.drop(["Sex"], axis = 1).groupby(["Species"]).aggregate([np.mean, np.var])
+```
+We can see noticeable differences in the summary statistics between species. For one, the Adelie penguins seem to have a much different distribution in culment length than both the Chinstrap and Gentoo penguins. We also see that the Gentoo sample is different from the Adelie and Chinstrap samples in Culmen depth, flipper length, and body mass.
+
+### Plots of Numeric Covariate Columns
+Now, we can proceed by plotting all the numeric entries. Because we work WLOG in the way they work, we can iteratively do this.
+
+First, we set `sns.set()` as our default aesthetic (personal choice). Then, we want to save the columns of interest's names in a list so we can use it for iterative purposes for more streamlined code.
+
+After defining our subplots and figures the standard `matplotlib` way using `pyplot`, we can then set our title with `set_title`, and then call `sns.histplot` with the similar parameters that we defined previously. 
+
+Lastly, we use `tight_layout` to adjust our figures so they aren't squished together!
+
+```python
+import matplotlib.pyplot as plt #import member function
+
+sns.set() # Setting seaborn as default style even if use only matplotlib (my personal favorite)
+numerics = ['Culmen Length (mm)', 'Culmen Depth (mm)',
+       'Flipper Length (mm)', 'Body Mass (g)',  'Delta 15 N (o/oo)',
+       'Delta 13 C (o/oo)'] #save list of column covariates I want to visualize 
+fig, ax = plt.subplots(1, 6, figsize =  (25, 5)) #6 numeric covariates
+fig.suptitle("Penguin Attributes: Numerical Covariates") #overarching main title
+for i,col in enumerate(numerics): #iterate through our list of column names
+    ax[i].set_title(col) #set the subtitle for our ith plot
+    sns.histplot(ax=ax[i], data = penguins, x = col, hue = "Species", multiple = "dodge", shrink = 0.8) #plot hist
+fig.tight_layout() #make plots cleaner/refined
+
+```
 
