added directory path

--- a/_posts/2021-10-07-blog-post-0.md
+++ b/_posts/2021-10-07-blog-post-0.md
@@ -57,7 +57,7 @@ For our first categorical bar chart, we want to measure frequencies of sex per p
 import seaborn as sns 
 sns.histplot(data = penguins, x = "Sex", hue = "Species", multiple="dodge", shrink = 0.8)
 ```
-![species_sex_fig.png](/Users/qianzach/Desktop/PIC_16B/species_sex_fig.png)
+![species_sex_fig.png](/images/species_sex_fig.png)
 
 Observe that the distributions *within* each species are balanced, but there are more Adelie penguins than Gentoo and Chinstrap. 
 
@@ -68,7 +68,7 @@ In this case, we want to measure frequencies in each penguin species for the isl
 ```python
 sns.histplot(data = penguins, x = "Island", hue = "Species", multiple = "stack",  shrink = 0.8)
 ```
-![species_island_fig.png](/Users/qianzach/Desktop/PIC_16B/species_island_fig.png)
+![species_island_fig.png](/images/species_island_fig.png)
 
 
 ### Discrete and Continuous Covariates
@@ -104,5 +104,5 @@ for i,col in enumerate(numerics): #iterate through our list of column names
 fig.tight_layout() #make plots cleaner/refined
 
 ```
-![numeric_figs.png](/Users/qianzach/Desktop/PIC_16B/numeric_figs.png)
+![numeric_figs.png](/images/numeric_figs.png)
 
