make graphics bigger
changed python script and added new image

--- a/_posts/2021-10-07-blog-post-0.md
+++ b/_posts/2021-10-07-blog-post-0.md
@@ -93,14 +93,15 @@ Lastly, we use `tight_layout` to adjust our figures so they aren't squished toge
 import matplotlib.pyplot as plt #import member function
 
 sns.set() # Setting seaborn as default style even if use only matplotlib (my personal favorite)
-numerics = ['Culmen Length (mm)', 'Culmen Depth (mm)',
-       'Flipper Length (mm)', 'Body Mass (g)',  'Delta 15 N (o/oo)',
-       'Delta 13 C (o/oo)'] #save list of column covariates I want to visualize 
-fig, ax = plt.subplots(1, 6, figsize =  (25, 5)) #6 numeric covariates
+numerics = [['Culmen Length (mm)', 'Culmen Depth (mm)',
+       'Flipper Length (mm)'], ['Body Mass (g)',  'Delta 15 N (o/oo)',
+       'Delta 13 C (o/oo)']] #save list of column covariates I want to visualize 
+fig, ax = plt.subplots(2, 3, figsize =  (15, 5)) #6 numeric covariates
 fig.suptitle("Penguin Attributes: Numerical Covariates") #overarching main title
-for i,col in enumerate(numerics): #iterate through our list of column names
-    ax[i].set_title(col) #set the subtitle for our ith plot
-    sns.histplot(ax=ax[i], data = penguins, x = col, hue = "Species", multiple = "dodge", shrink = 0.8) #plot hist
+for i in range(0,2): #loop through axis rows
+    for j in range(0,3): #loop through axis cols
+        ax[i][j].set_title(col) #set the subtitle for our jth plot
+        sns.histplot(ax=ax[i][j], data = penguins, x = numerics[i][j], hue = "Species", multiple = "dodge", shrink = 0.8) #plot hist with similar parameters as before
 fig.tight_layout() #make plots cleaner/refined
 
 ```
