--- a/_posts/2021-10-15-blog-post-1.md
+++ b/_posts/2021-10-15-blog-post-1.md
@@ -749,9 +749,10 @@ Now that we finished implementing our function, let's try an example plot!
 color_map = px.colors.diverging.RdGy_r # choose a colormap
 
 
-fig = temperature_coefficient_plot("India", 1980, 2020, 1, 
+fig = temperature_coefficient_plot("China", 1980, 2020, 1, 
                                    min_obs = 10,
                                    zoom = 2,
+                                    color_continuous_midpoint = 0,
                                    mapbox_style="carto-positron",
                                    color_continuous_scale=color_map)
 
@@ -760,9 +761,9 @@ fig.show()
 ```
 
 
-<div>                            <div id="f9e38b18-3cd2-4918-90af-b3baf7b4fa2f" class="plotly-graph-div" style="height:525px; width:100%;"></div>            <script type="text/javascript">                require(["plotly"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById("f9e38b18-3cd2-4918-90af-b3baf7b4fa2f")) {                    Plotly.newPlot(                        "f9e38b18-3cd2-4918-90af-b3baf7b4fa2f",                        [{"hovertemplate":"<b>%{hovertext}</b><br><br>LATITUDE=%{lat}<br>LONGITUDE=%{lon}<br>Estimated_Yearly_Delta=%{marker.color}<extra></extra>","hovertext":["AGARTALA","AHMADABAD","AKOLA","AKOLA","ALLAHABAD","ALLAHABAD_BAMHRAULI","AMRITSAR","AURANGABAD_CHIKALTH","BALASORE","BANGALORE","BAREILLY","BEGUMPETOBSY","BELGAUM_SAMBRA","BHOPAL_BAIRAGARH","BHUBANESWAR","BHUJ_RUDRAMATA","BIKANER","BOMBAY_COLABA","BOMBAY_SANTACRUZ","CALCUTTA_ALIPORE","CALCUTTA_DUM_DUM","CHERRAPUNJI","CHERRA_POONJEE","CHITRADURGA","COIMBATORE_PEELAMED","CUDDALORE","DALTONGANJ","DEHRADUN","DIBRUGARH_MOHANBAR","DUMKA","DWARKA","GADAG","GANGANAGAR","GAUHATI","GAYA","GOA_PANJIM","GORAKHPUR","GUNA","GWALIOR","HISSAR","HONAVAR","IMPHAL","INDORE","JABALPUR","JAGDALPUR","JAIPUR_SANGANER","JAISALMER","JHARSUGUDA","JODHPUR","KAKINADA","KARAIKAL","KODAIKANAL","KOTA_AERODROME","KOZHIKODE","KURNOOL","LUCKNOW_AMAUSI","LUDHIANA","MACHILIPATNAM","MADRAS_MINAMBAKKAM","MANGALORE_BAJPE","MINICOY","MINICOYOBSY","MO_AMINI","MO_RANCHI","MUKTESWAR_KUMAON","NAGPUR_SONEGAON","NELLORE","NEW_DELHI_PALAM","NEW_DELHI_SAFDARJUN","NORTH_LAKHIMPUR","PAMBAN","PATIALA","PATNA","PBO_ANANTAPUR","PENDRA_ROAD","POONA","PORT_BLAIR","RAIPUR","RAJKOT","RAMGUNDAM","RATNAGIRI","SAGAR","SANDHEADS","SATNA","SHILONG","SHIMLA","SHOLAPUR","SILCHAR","SRINAGAR","SURAT","TEZPUR","THIRUVANANTHAPURAM","THIRUVANANTHAPURAM","TIRUCHCHIRAPALLI","TRIVANDRUM","UDAIPUR_DABOK","VARANASI_BABATPUR","VERAVAL","VISHAKHAPATNAM"],"lat":[23.883000000000003,23.066999999999997,20.7,20.7,25.441,25.5,31.71,19.85,21.517,12.967,28.366999999999997,17.45,15.85,23.283,20.25,23.25,28.0,18.9,19.117,22.533,22.65,25.25,25.25,14.232999999999999,11.033,11.767000000000001,24.05,30.316999999999997,27.483,24.267,22.3667,15.417,29.916999999999998,26.1,24.75,15.482999999999999,26.75,24.65,26.233,29.166999999999998,14.283,24.666999999999998,22.717,23.2,19.083,26.816999999999997,26.9,21.916999999999998,26.3,16.95,10.917,10.2333,25.15,11.25,15.8,26.75,30.9333,16.2,13.0,12.917,8.3,8.3,11.117,23.316999999999997,29.4667,21.1,14.45,28.566999999999997,28.583000000000002,27.233,9.267000000000001,30.333000000000002,25.6,14.583,22.767,18.533,11.667,21.217,22.3,18.767,16.983,23.85,20.85,24.566999999999997,25.6,31.1,17.667,24.82,34.083,21.2,26.616999999999997,8.467,8.482999999999999,10.767000000000001,8.5,24.616999999999997,25.45,20.9,17.717],"legendgroup":"","lon":[91.25,72.633,77.033,77.067,81.735,81.9,74.797,75.4,86.93299999999999,77.583,79.4,78.47,74.617,77.35,85.833,69.667,73.3,72.8167,72.85,88.333,88.45,91.7333,91.73,76.433,77.05,79.767,84.06700000000001,78.033,95.01700000000001,87.25,69.0833,75.633,73.917,91.583,84.95,73.817,83.367,77.317,78.25,75.733,74.45,93.9,75.8,79.95,82.03299999999999,75.8,70.917,84.083,73.017,82.23299999999999,79.833,77.4667,75.85,75.783,78.067,80.883,75.8667,81.15,80.183,74.883,73.15,73.0,72.733,85.31700000000001,79.65,79.05,79.983,77.117,77.2,94.117,79.3,76.467,85.1,77.633,81.9,73.85,92.71700000000001,81.667,70.783,79.433,73.333,78.75,88.25,80.833,91.89,77.167,75.9,92.83,74.833,72.833,92.78299999999999,76.95,76.95,78.717,77.0,73.883,82.867,70.367,83.23299999999999],"marker":{"color":[-0.006,0.007,-0.002,-0.006,-0.029,-0.015,-0.007,0.012,-0.009,0.036,-0.017,0.011,-0.004,-0.022,-0.016,0.07,0.017,0.011,0.035,-0.01,-0.016,0.047,-0.022,0.016,0.034,0.021,-0.005,0.044,0.052,-0.082,0.017,0.009,-0.008,0.014,-0.018,0.022,0.004,-0.009,-0.018,-0.003,-0.049,0.063,0.003,-0.025,-0.0,0.007,0.003,-0.018,0.01,0.026,0.021,0.069,-0.019,0.033,0.026,-0.037,0.132,0.012,0.024,0.023,0.025,0.014,-0.006,0.005,0.015,-0.025,0.023,0.006,-0.002,0.095,0.025,-0.012,-0.022,0.026,-0.01,-0.0,0.031,0.001,0.016,-0.009,0.003,0.002,-0.052,-0.023,0.013,0.004,0.004,0.016,0.049,0.023,0.039,0.009,0.021,0.015,0.023,0.072,-0.013,0.025,-0.034],"coloraxis":"coloraxis"},"mode":"markers","name":"","showlegend":false,"subplot":"mapbox","type":"scattermapbox"}],                        {"coloraxis":{"colorbar":{"title":{"text":"Estimated_Yearly_Delta"}},"colorscale":[[0.0,"rgb(26,26,26)"],[0.1,"rgb(77,77,77)"],[0.2,"rgb(135,135,135)"],[0.3,"rgb(186,186,186)"],[0.4,"rgb(224,224,224)"],[0.5,"rgb(255,255,255)"],[0.6,"rgb(253,219,199)"],[0.7,"rgb(244,165,130)"],[0.8,"rgb(214,96,77)"],[0.9,"rgb(178,24,43)"],[1.0,"rgb(103,0,31)"]]},"legend":{"tracegroupgap":0},"mapbox":{"center":{"lat":21.042010101010103,"lon":79.63467373737375},"domain":{"x":[0.0,1.0],"y":[0.0,1.0]},"style":"carto-positron","zoom":2},"margin":{"b":0,"l":0,"r":0,"t":0},"template":{"data":{"bar":[{"error_x":{"color":"#2a3f5f"},"error_y":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"bar"}],"barpolar":[{"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"barpolar"}],"carpet":[{"aaxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"baxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"type":"carpet"}],"choropleth":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"choropleth"}],"contour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"contour"}],"contourcarpet":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"contourcarpet"}],"heatmap":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmap"}],"heatmapgl":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmapgl"}],"histogram":[{"marker":{"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"histogram"}],"histogram2d":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2d"}],"histogram2dcontour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2dcontour"}],"mesh3d":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"mesh3d"}],"parcoords":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"parcoords"}],"pie":[{"automargin":true,"type":"pie"}],"scatter":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter"}],"scatter3d":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter3d"}],"scattercarpet":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattercarpet"}],"scattergeo":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergeo"}],"scattergl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergl"}],"scattermapbox":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattermapbox"}],"scatterpolar":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolar"}],"scatterpolargl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolargl"}],"scatterternary":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterternary"}],"surface":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"surface"}],"table":[{"cells":{"fill":{"color":"#EBF0F8"},"line":{"color":"white"}},"header":{"fill":{"color":"#C8D4E3"},"line":{"color":"white"}},"type":"table"}]},"layout":{"annotationdefaults":{"arrowcolor":"#2a3f5f","arrowhead":0,"arrowwidth":1},"autotypenumbers":"strict","coloraxis":{"colorbar":{"outlinewidth":0,"ticks":""}},"colorscale":{"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]],"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]},"colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"],"font":{"color":"#2a3f5f"},"geo":{"bgcolor":"white","lakecolor":"white","landcolor":"#E5ECF6","showlakes":true,"showland":true,"subunitcolor":"white"},"hoverlabel":{"align":"left"},"hovermode":"closest","mapbox":{"style":"light"},"paper_bgcolor":"white","plot_bgcolor":"#E5ECF6","polar":{"angularaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","radialaxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"scene":{"xaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"yaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"zaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"}},"shapedefaults":{"line":{"color":"#2a3f5f"}},"ternary":{"aaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"baxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","caxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"title":{"x":0.05},"xaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2},"yaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2}}},"title":{"text":"Estimated Yearly Change in Temperature for Stations in India from 1980 to 2020 in January"}},                        {"responsive": true}                    ).then(function(){
+<div>                            <div id="cb975547-2f33-4bbe-bd7f-dac8ed594f0e" class="plotly-graph-div" style="height:525px; width:100%;"></div>            <script type="text/javascript">                require(["plotly"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById("cb975547-2f33-4bbe-bd7f-dac8ed594f0e")) {                    Plotly.newPlot(                        "cb975547-2f33-4bbe-bd7f-dac8ed594f0e",                        [{"hovertemplate":"<b>%{hovertext}</b><br><br>LATITUDE=%{lat}<br>LONGITUDE=%{lon}<br>Estimated_Yearly_Delta=%{marker.color}<extra></extra>","hovertext":["ABAG_QI","ABAG_QI","AIHUI","AKQI","AKQI","ALAR","ALTAY","ANDA","ANDIR","ANDIR","ANKANG","ANQING","ANYANG","ARXAN","BACHU","BAILING_MIAO","BAINGOIN","BAINGOIN","BAISE","BALGUNTAY","BALGUNTAY","BAODING","BAOJI","BAOQING","BAOSHAN","BARKAM","BARKAM","BATANG","BAYANBULAK","BAYAN_MOD","BAYTIK_SHAN","BEIDAO","BEIHAI","BEIJING","BEIJING_PEKING","BENGBU","BENXI","BIJIE","BOXIAN","BUGT","BUGT","CANGZHOU","CAOHEKOU","CH'AD_N","CHANGCHUN","CHANGDE","CHANGLING","CHANGSHA","CHANGSHA","CHANGTING","CHANG_DAO","CHAOYANG","CHENGDE","CHENGDU","CHENGSHANTOU","CHENZHOU","CHIFENG","CHIU_CHUAN","CHONGQING","CHUXIONG","DACHEN_DAO","DALI","DALIAN","DANDONG","DANXIAN","DAOCHENG","DARLAG","DATONG","DAWU","DA_QAIDAM","DA_XIAN","DEGE","DELINGHA","DENGQEN","DEQEN","DEQEN","DEZHOU","DINGHAI","DINGTAO","DONGFANG","DONGSHENG","DONGTAI","DULAN","DUNHUA","DUNHUANG","DUOLUN","DUSHAN","EJIN_QI","EMEI_SHAN","ENSHI","ERENHOT","FANGXIAN","FENGJIE","FENGNING","FOGANG","FORTALEZA_DO_MONTE","FUDING","FUJIN","FUYANG","FUYUN","FUZHOU","GANGCA","GANYU","GANZHOU","GAOYAO","GARZE","GENGMA","GOLMUD","GUAIZIHU","GUANGCHANG","GUANGHUA","GUANGNAN","GUANGZHOU","GUILIN","GUINAN","GUIPING","GUIYANG","GUSHI","HAIKOU","HAILAR","HAILS","HAILUN","HAIYANG","HALIUT","HAMI","HANGZHOU","HANZHONG","HARBIN","HECHI","HEFEI","HENAN","HEQU","HEYUAN","HEZE","HEZE_CAOZHOU","HEZUO","HOBOKSAR","HOBOKSAR","HOHHOT","HONG_KONG_OBSERVATORY","HOTAN","HUADE","HUADIAN","HUAILAI","HUAJIALING","HUANG_SHAN","HUA_SHAN","HUILI","HUIMIN","HUIZE","HULIN","HUMA","HUOSHAN","JARTAI","JARUD_QI","JIAN","JIAN","JIANGCHENG","JIANGLING","JIEXIU","JINAN","JINFO_SHAN","JINGDEZHEN","JINGHE","JINGHE","JINGHONG","JINING","JINZHOU","JIULONG","JIUQUAN","JIUXIAN_SHAN","JIXI","JURH","KABA_HE","KANGDING","KARAMAY","KASHI","KESHAN","KING'S_PARK","KORLA","KUANDIAN","KUNMING","KUNMING_YUNNANFU_WAS_999022","KUOCANG_SHAN","KUQA","LANCANG","LANCANG","LANCANG","LANGZHONG","LANZHOU","LENGHU","LETING","LHASA","LHUNZE","LIANGPING","LIANPING","LIAN_XIAN","LIJING","LIJING","LINCANG","LINDONG","LINGLING","LINHE","LINJIANG","LINXI","LINYI","LISHI","LISHUI","LITANG","LIUZHOU","LIYANG","LONGKOU","LONGYAN","LONGZHOU","LUODIAN","LUOYANG","LUSHI","LUSI","LUXI","LUZHOU","LU_SHAN","MACHENG","MADOI","MADOI","MANDAL","MANGNAI","MAZONG_SHAN","MEI_XIAN","MENGJIN","MENGLA","MENGSHAN","MENGZI","MIANYANG","MINQIN","MOHE","MUDANJIANG","NAGQU","NAGQU","NANCHANG","NANCHENG","NANCHONG","NANJING","NANNING","NANPING","NANYANG","NANYUE","NAPO","NARAN_BULAG","NARAN_BULAG","NEIJIANG","NENJIANG","NYINGCHI","OTOG_QI","PAGRI","PINGBIAN","PINGLIANG","PINGTAN","PINGWU","PINGWU","PISHAN","POTOU","PUCHENG","QAMDO","QIAN_GORLOS","QIEMO_QARQAN","QIJIAOJING","QINGDAO","QINGJIANG","QINGLONG","QINGYUAN","QINZHOU","QIONGHAI","QIQIHAR","QITAI","QIXIAN_SHAN","QUMARLEB","QUMARLEB","QU_XIAN","RIZHAO","RONGJIANG","RUIAN","RUILI","RUO'ERGAI","RUO'ERGAI","RUOQIANG","SANGZHI","SANHU_DAO","SANSUI","SANYA","SERTAR","SERTAR","SHACHE","SHANGCHUAN_DA","SHANGHAI","SHANGHAI_HONGQIAO","SHANGZHI","SHANTOU","SHANWEI","SHAOGUAN","SHAOWU","SHAOYANG","SHENGSI","SHENGXIAN","SHENYANG","SHENZHEN","SHEYANG","SHIJIAZHUANG","SHIPU","SHIQUANHE","SHIQUANHE","SHISANJIANFANG","SHUANGLIU","SIMAO","SINAN","SINAN","SIPING","SOG_XIAN","SONGPAN","SUIFENHE","SUNWU","TACHENG","TAILAI","TAIPA_GRANDE","TAISHAN","TAIYUAN","TAI_SHAN","TANGSHAN","TAZHONG","TENGCHONG","TIANJIN","TIANMU_SHAN","TIANSHUI","TIKANLIK","TINGRI","TONGDAO","TONGDE","TONGDE","TONGHE","TONGLIAO","TULIHE","TUOTUOHE","TUOTUOHE","TURPAN","ULIASTAI","URUMGIXINJIANG","WANYUAN","WEICHANG","WEIFANG","WEINING","WENJIANG","WENZHOU","WUDAOLIANG","WUDAOLIANG","WUDU","WUGANG","WUHAN","WUHUXIAN","WUSHAOLING","WUTAI_SHAN","WUZHOU","WU_LU_MU_QI","XAINZA","XIAMEN","XIAN","XIAO'ERGOU","XICHANG","XIFENGZHEN","XIFENGZHEN","XIGAZE","XIHUA","XILIN_HOT","XINGREN","XINGTAI","XINING","XINXIAN","XINYANG","XINYI","XIN_BARAG_YOU","XISHA_DAO","XIUSHUI","XI_UJIMQIN_QI","XUNWU","XUZHOU","YA'AN","YANCHI","YANGCHENG","YANGJIANG","YANJI","YANZHOU","YAN_AN","YIBIN","YICHANG","YICHUN","YICHUN","YINCHUAN","YINGKOU","YINING","YIWU","YIYUAN","YONGAN","YOUYANG","YUANJIANG","YUANLING","YUANMOU","YUANMOU","YUANPING","YUEYANG","YULIN","YULIN","YUMENZHEN","YUNCHENG","YUSHE","YUSHU","YU_XIAN","YU_ZHONG","ZADOI","ZADOI","ZAOYANG","ZHANGJIAKOU","ZHANGWU","ZHANGYE","ZHANJIANG","ZHAOTONG","ZHENGZHOU","ZHIJIANG","ZHONGNING","ZHONGXIANG","ZHUMADIAN","ZUNYI"],"lat":[43.68,44.016999999999996,50.25,40.78,40.93,40.5,47.733000000000004,46.383,37.6,37.93,32.72,30.533,36.05,47.167,39.8,41.7,31.366999999999997,31.8,23.9,42.67,43.02,38.85,34.35,46.32,25.13,31.9,31.92,30.0,43.03,40.75,45.37,34.567,21.48,39.933,39.8,32.95,41.317,27.3,33.883,42.33,48.766999999999996,38.333,40.883,23.75,43.9,29.05,44.25,28.2,28.233,25.85,37.933,41.55,40.967,30.666999999999998,37.4,25.8,42.3,39.8,29.583000000000002,25.017,28.45,25.7,38.9,40.05,19.52,29.05,33.75,40.1,30.98,37.85,31.2,31.73,37.37,31.416999999999998,28.45,28.82,37.48,30.033,35.083,19.1,39.83,32.85,36.3,43.37,40.15,42.183,25.83,41.95,29.52,30.283,43.65,32.03,31.05,41.22,23.87,22.1833,27.33,47.233000000000004,32.93,46.983000000000004,26.083000000000002,37.333,34.85,25.866999999999997,23.05,31.616999999999997,23.55,36.417,41.18,26.85,32.383,24.07,23.217,25.333000000000002,35.583,23.4,26.583000000000002,32.17,20.0,49.25,41.45,47.433,36.77,41.567,42.817,30.233,33.067,45.75,24.7,31.866999999999997,34.73,39.38,23.8,35.28,35.25,35.0,46.63,46.783,40.817,22.3,37.133,41.9,42.98,40.417,35.38,30.13,34.48,26.65,37.5,26.42,45.77,51.717,31.4,39.783,44.567,27.116999999999997,41.15,22.62,30.33,37.033,36.6,28.88,29.3,34.433,44.617,22.02,41.03,41.133,29.0,39.766999999999996,25.72,45.283,42.4,48.05,30.05,45.6,39.467,48.05,22.333000000000002,41.75,40.72,25.017,25.1,28.82,41.717,22.566999999999997,22.8,23.43,31.58,36.05,38.833,39.433,29.666999999999998,28.42,30.68,24.37,24.78,26.833000000000002,26.88,23.95,43.983000000000004,26.233,40.77,41.717,43.6,35.05,37.5,28.45,30.0,24.35,31.43,37.62,25.1,22.366999999999997,25.43,35.0,34.05,32.07,24.53,28.88,29.58,31.18,34.4,34.917,42.53,38.25,41.8,24.3,34.817,21.5,24.2,23.383000000000003,31.47,38.633,52.133,44.567,31.483,32.1,28.6,27.583000000000002,30.8,31.933000000000003,22.633000000000003,26.633000000000003,33.03,27.3,23.3,44.62,44.67,29.58,49.167,29.57,39.1,27.73,22.9833,35.55,25.52,32.42,32.42,37.62,38.083,27.92,31.15,45.083,38.15,43.48,36.067,33.6,40.4,42.1,21.95,19.233,47.383,44.016999999999996,27.95,34.133,34.6,28.967,35.38,25.97,27.783,24.02,33.33,33.583,39.033,29.4,16.53,26.97,18.217,32.28,32.42,38.433,21.73,31.4,31.166999999999998,45.217,23.4,22.783,24.666999999999998,27.33,27.23,30.73,29.6,41.733000000000004,22.55,33.77,38.033,29.2,32.18,32.5,43.217,30.5667,22.767,27.95,28.33,43.183,31.883000000000003,32.65,44.383,49.433,46.73,46.4,22.15,27.0,37.783,36.25,39.67,39.0,25.116999999999997,39.1,30.35,34.583,40.633,28.63,26.17,34.87,35.27,45.967,43.6,50.45,33.95,34.217,42.933,45.516999999999996,43.9,32.067,41.93,36.766999999999996,26.87,30.75,28.017,35.22,35.28,33.4,26.73,30.6,31.15,37.2,39.03,23.483,43.8,30.95,24.483,34.3,49.2,27.9,35.73,35.98,29.25,33.78,43.95,25.433000000000003,37.07,36.617,36.03,32.133,22.35,48.67,16.833,29.03,44.583,24.95,34.283,29.98,37.8,35.48,21.866999999999997,42.867,35.567,36.6,28.8,30.7,27.8,47.72,38.467,40.667,43.95,43.27,36.18,25.967,28.833000000000002,23.6,28.47,25.68,25.73,38.75,29.38,22.63,38.233000000000004,40.266999999999996,35.05,37.07,33.0,39.83,35.867,32.9,33.15,32.15,40.78,42.417,38.93,21.22,27.33,34.717,27.45,37.48,31.17,33.0,27.7],"legendgroup":"","lon":[114.48,114.95,127.45,77.92,78.45,81.05,88.083,125.31700000000001,83.83,83.65,109.03,117.05,114.4,119.93299999999999,78.567,110.43299999999999,90.01700000000001,89.67,106.6,86.33,86.6,115.57,107.13,132.18,99.22,102.23299999999999,102.6,99.1,84.15,104.5,90.53,105.867,109.1,116.28299999999999,116.5,117.367,123.78299999999999,105.23299999999999,115.76700000000001,120.7,121.917,116.833,123.9,117.52,125.21700000000001,111.68299999999999,123.97,113.083,112.867,116.37,120.71700000000001,120.45,117.917,104.01700000000001,122.68299999999999,113.03,118.833,98.6,106.46700000000001,101.51700000000001,121.883,100.18,121.633,124.333,109.58,100.3,99.65,113.333,101.12,95.367,107.5,98.57,97.37,95.6,98.883,99.38,116.37,122.117,115.51700000000001,108.617,109.98,120.28299999999999,98.1,128.2,94.68299999999999,116.46700000000001,107.55,101.06700000000001,103.33,109.46700000000001,112.0,110.77,109.5,116.63,113.53,113.5333,120.2,131.983,115.83,89.51700000000001,119.28299999999999,100.133,119.133,115.0,112.47,100.0,99.4,94.9,103.27,116.33,111.667,105.07,113.48299999999999,110.3,100.75,110.083,106.73299999999999,115.67,110.25,119.7,106.383,126.96700000000001,121.17,108.51700000000001,93.51700000000001,120.167,107.03299999999999,126.76700000000001,108.05,117.23299999999999,101.6,111.15,114.73299999999999,115.53,115.43299999999999,102.9,86.18,85.71700000000001,111.68299999999999,114.167,79.933,114.0,126.75,115.5,105.0,118.15,110.08,102.25,117.53299999999999,103.28,132.97,126.65,116.333,105.75,120.9,114.96700000000001,126.21700000000001,101.82,112.18,111.917,117.05,107.45,117.2,108.96700000000001,82.9,100.8,113.07,121.117,101.5,98.48299999999999,118.1,130.94899999999998,112.9,86.35,101.97,84.85,75.983,125.883,114.167,86.133,124.78,102.68299999999999,102.9,120.92,82.95,99.93299999999999,100.12,99.13,105.97,103.883,93.383,118.9,91.133,92.47,107.8,114.48,112.38,100.46700000000001,100.17,100.21700000000001,119.4,111.617,107.4,126.917,118.06700000000001,118.35,111.1,119.92,100.26700000000001,109.4,119.48,120.32,117.0,106.75,106.77,112.5,111.03299999999999,121.6,103.77,105.43,115.98,114.97,98.52,98.21700000000001,110.13,90.85,97.03299999999999,116.12,112.43299999999999,101.58,110.52,103.383,104.68,103.083,122.51700000000001,129.6,92.06700000000001,92.27,115.917,116.65,106.083,118.9,108.21700000000001,118.0,112.58,112.7,105.95,114.15,113.73,105.05,125.23299999999999,94.47,107.98299999999999,89.08,103.6833,106.667,119.78,104.52,105.42,78.28,116.55,118.53,97.167,124.867,85.55,91.63,120.333,119.03,118.95,124.95,108.617,110.46700000000001,123.917,89.56700000000001,117.85,95.78299999999999,95.85,118.867,119.53,108.53,120.65,97.83,102.72,102.96700000000001,88.167,110.17,111.62,108.67,109.583,100.33,100.73,77.267,112.77,121.46700000000001,121.43299999999999,127.96700000000001,116.68299999999999,115.367,113.6,117.43,111.47,122.45,120.82,123.51700000000001,114.1,120.25,114.417,121.95,79.98,80.083,91.73299999999999,103.9333,100.98299999999999,108.25,108.5,124.333,93.78299999999999,103.56700000000001,131.15,127.35,83.0,123.42,113.55,120.7,112.55,117.1,118.15,83.667,98.48299999999999,117.167,119.42,105.75,87.7,87.08,109.78,100.93,100.65,128.733,122.26700000000001,121.7,92.62,92.43299999999999,89.2,116.96700000000001,87.5,108.03299999999999,117.75,119.18299999999999,104.28,103.867,120.667,93.08,93.6,104.917,110.63,114.05,118.583,102.867,113.53,111.3,87.65,88.633,118.083,108.93299999999999,123.72,102.26700000000001,107.63,107.77,88.883,114.52,116.117,105.18299999999999,114.5,101.76700000000001,115.58,114.05,110.93,116.82,112.333,114.58,117.6,115.65,117.15,103.0,107.383,112.4,111.96700000000001,129.5,116.85,109.5,104.6,111.3,114.38,128.9,106.2,122.2,81.333,94.7,118.15,117.35,108.76700000000001,101.98,110.4,102.28,101.87,112.7,113.08,110.17,109.7,97.03299999999999,111.05,112.98,96.96700000000001,114.57,104.15,95.3,94.72,112.67,114.88,122.53299999999999,100.43,110.4,103.75,113.65,109.68299999999999,105.67,112.57,114.01700000000001,106.883],"marker":{"color":[0.046,0.057,0.04,0.067,-0.023,-0.034,-0.026,0.061,0.174,0.011,0.022,0.046,0.025,0.046,-0.004,0.011,0.063,0.274,0.0,-0.03,0.031,0.02,0.011,0.04,0.06,0.028,0.091,0.078,0.046,-0.009,-0.029,0.019,-0.048,0.034,0.013,0.053,0.061,0.012,0.031,0.007,0.031,0.159,0.305,0.119,0.05,0.05,-0.004,-0.006,-0.012,-0.032,-0.019,0.058,0.066,0.03,0.044,-0.033,0.028,-0.041,0.018,0.071,0.037,0.059,0.02,0.069,-0.02,0.071,0.042,0.031,0.034,0.03,-0.016,0.059,0.058,0.049,0.017,0.235,0.13,0.034,0.035,0.039,0.01,0.037,0.038,0.041,-0.014,0.034,-0.053,-0.002,-0.02,0.028,0.051,-0.001,0.021,0.008,-0.027,0.004,-0.013,0.06,-0.01,0.02,0.012,0.039,0.043,0.015,-0.032,0.064,0.069,0.046,0.158,-0.021,0.027,-0.059,0.033,0.026,0.025,0.02,0.001,-0.006,0.036,-0.002,0.007,0.045,0.013,0.041,-0.043,0.034,0.03,0.044,0.023,0.029,0.055,0.001,0.019,0.102,0.068,0.052,0.033,-0.064,0.048,0.046,0.001,0.027,0.018,0.044,-0.008,-0.005,-0.008,0.041,0.041,0.008,0.025,0.039,0.031,-0.009,0.04,0.028,0.087,0.01,-0.01,0.018,0.044,0.008,0.029,0.11,-0.035,0.018,-0.018,0.044,0.045,-0.015,0.008,0.058,0.028,-0.12,-0.033,-0.037,-0.024,0.056,0.037,-0.015,0.062,0.052,0.064,0.055,-0.006,0.042,0.086,0.107,-0.014,0.026,0.015,0.059,0.025,0.003,-0.024,-0.032,-0.041,0.032,0.115,0.036,0.029,0.029,-0.028,0.076,0.021,0.054,0.023,-0.01,0.077,-0.029,-0.003,0.01,-0.075,0.016,-0.036,0.016,0.01,-0.002,-0.016,-0.034,-0.032,-0.007,-0.13,0.058,-0.033,-0.001,-0.013,-0.032,-0.016,0.028,-0.044,0.042,0.002,0.003,0.089,0.054,0.053,0.452,0.038,0.028,0.02,0.045,0.012,0.025,-0.019,-0.043,-0.023,-0.024,0.043,0.012,0.049,0.034,0.018,0.034,0.154,0.011,-0.003,0.028,0.094,-0.044,0.058,-0.008,0.041,0.022,0.0,0.03,0.031,0.041,0.021,0.01,0.017,0.03,0.029,-0.017,0.012,0.084,0.105,0.026,0.009,-0.025,0.11,0.019,0.079,0.076,-0.008,-0.029,0.095,-0.02,0.032,0.054,0.137,-0.01,-0.029,0.042,0.02,0.052,0.027,0.022,0.03,-0.027,-0.022,-0.006,-0.013,0.025,-0.018,0.012,0.018,0.007,0.028,0.003,-0.071,0.003,0.064,-0.012,0.065,0.015,0.056,0.048,0.055,0.041,-0.055,-0.02,0.062,0.093,0.036,0.007,0.027,-0.011,0.053,0.029,0.016,0.031,-0.007,0.063,-0.025,0.156,-0.03,0.038,0.056,0.004,0.082,0.048,-0.019,0.037,-0.007,0.012,-0.001,0.067,-0.024,0.062,0.063,0.073,0.136,0.033,-0.034,0.02,0.028,0.014,0.02,0.022,0.004,0.026,0.029,-0.007,-0.0,0.046,-0.019,0.07,0.029,-0.002,0.032,0.019,-0.002,0.02,-0.005,0.008,-0.031,-0.059,0.026,-0.017,0.017,-0.027,0.033,-0.012,0.025,-0.016,0.018,0.066,0.035,0.038,-0.003,0.017,-0.022,0.036,0.031,0.038,0.046,0.012,0.014,0.037,0.017,-0.014,-0.022,0.065,0.047,0.062,-0.01,0.067,0.051,-0.021,0.044,-0.016,0.059,0.015,0.166,0.091,0.267,-0.012,-0.032,0.034,-0.055,-0.019,-0.037,0.044,0.016,-0.033,-0.026,0.033,-0.022],"coloraxis":"coloraxis"},"mode":"markers","name":"","showlegend":false,"subplot":"mapbox","type":"scattermapbox"}],                        {"coloraxis":{"cmid":0,"colorbar":{"title":{"text":"Estimated_Yearly_Delta"}},"colorscale":[[0.0,"rgb(26,26,26)"],[0.1,"rgb(77,77,77)"],[0.2,"rgb(135,135,135)"],[0.3,"rgb(186,186,186)"],[0.4,"rgb(224,224,224)"],[0.5,"rgb(255,255,255)"],[0.6,"rgb(253,219,199)"],[0.7,"rgb(244,165,130)"],[0.8,"rgb(214,96,77)"],[0.9,"rgb(178,24,43)"],[1.0,"rgb(103,0,31)"]]},"legend":{"tracegroupgap":0},"mapbox":{"center":{"lat":34.02698438228438,"lon":108.67776666666666},"domain":{"x":[0.0,1.0],"y":[0.0,1.0]},"style":"carto-positron","zoom":2},"margin":{"b":0,"l":0,"r":0,"t":0},"template":{"data":{"bar":[{"error_x":{"color":"#2a3f5f"},"error_y":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"bar"}],"barpolar":[{"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"barpolar"}],"carpet":[{"aaxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"baxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"type":"carpet"}],"choropleth":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"choropleth"}],"contour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"contour"}],"contourcarpet":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"contourcarpet"}],"heatmap":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmap"}],"heatmapgl":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmapgl"}],"histogram":[{"marker":{"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"histogram"}],"histogram2d":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2d"}],"histogram2dcontour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2dcontour"}],"mesh3d":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"mesh3d"}],"parcoords":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"parcoords"}],"pie":[{"automargin":true,"type":"pie"}],"scatter":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter"}],"scatter3d":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter3d"}],"scattercarpet":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattercarpet"}],"scattergeo":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergeo"}],"scattergl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergl"}],"scattermapbox":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattermapbox"}],"scatterpolar":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolar"}],"scatterpolargl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolargl"}],"scatterternary":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterternary"}],"surface":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"surface"}],"table":[{"cells":{"fill":{"color":"#EBF0F8"},"line":{"color":"white"}},"header":{"fill":{"color":"#C8D4E3"},"line":{"color":"white"}},"type":"table"}]},"layout":{"annotationdefaults":{"arrowcolor":"#2a3f5f","arrowhead":0,"arrowwidth":1},"autotypenumbers":"strict","coloraxis":{"colorbar":{"outlinewidth":0,"ticks":""}},"colorscale":{"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]],"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]},"colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"],"font":{"color":"#2a3f5f"},"geo":{"bgcolor":"white","lakecolor":"white","landcolor":"#E5ECF6","showlakes":true,"showland":true,"subunitcolor":"white"},"hoverlabel":{"align":"left"},"hovermode":"closest","mapbox":{"style":"light"},"paper_bgcolor":"white","plot_bgcolor":"#E5ECF6","polar":{"angularaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","radialaxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"scene":{"xaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"yaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"zaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"}},"shapedefaults":{"line":{"color":"#2a3f5f"}},"ternary":{"aaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"baxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","caxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"title":{"x":0.05},"xaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2},"yaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2}}},"title":{"text":"Estimated Yearly Change in Temperature for Stations in China from 1980 to 2020 in January"}},                        {"responsive": true}                    ).then(function(){
 
-var gd = document.getElementById('f9e38b18-3cd2-4918-90af-b3baf7b4fa2f');
+var gd = document.getElementById('cb975547-2f33-4bbe-bd7f-dac8ed594f0e');
 var x = new MutationObserver(function (mutations, observer) {{
         var display = window.getComputedStyle(gd).display;
         if (!display || display === 'none') {{
@@ -837,8 +838,8 @@ Let's see the output!
 
 
 ```python
-query_climate_database_facet(  year_begin = 1980, 
-                       year_end = 1981).head()
+query_climate_database_facet(  year_begin = 2000, 
+                       year_end = 2001).head()
 ```
 
 
@@ -878,9 +879,9 @@ query_climate_database_facet(  year_begin = 1980,
       <td>57.7667</td>
       <td>11.8667</td>
       <td>Antigua and Barbuda</td>
-      <td>1980</td>
+      <td>2000</td>
       <td>1</td>
-      <td>-2.71</td>
+      <td>2.95</td>
     </tr>
     <tr>
       <th>1</th>
@@ -888,9 +889,9 @@ query_climate_database_facet(  year_begin = 1980,
       <td>57.7667</td>
       <td>11.8667</td>
       <td>Antigua and Barbuda</td>
-      <td>1980</td>
+      <td>2000</td>
       <td>2</td>
-      <td>-4.31</td>
+      <td>3.25</td>
     </tr>
     <tr>
       <th>2</th>
@@ -898,9 +899,9 @@ query_climate_database_facet(  year_begin = 1980,
       <td>57.7667</td>
       <td>11.8667</td>
       <td>Antigua and Barbuda</td>
-      <td>1980</td>
+      <td>2000</td>
       <td>3</td>
-      <td>0.34</td>
+      <td>3.45</td>
     </tr>
     <tr>
       <th>3</th>
@@ -908,9 +909,9 @@ query_climate_database_facet(  year_begin = 1980,
       <td>57.7667</td>
       <td>11.8667</td>
       <td>Antigua and Barbuda</td>
-      <td>1980</td>
+      <td>2000</td>
       <td>4</td>
-      <td>5.93</td>
+      <td>9.25</td>
     </tr>
     <tr>
       <th>4</th>
@@ -918,9 +919,9 @@ query_climate_database_facet(  year_begin = 1980,
       <td>57.7667</td>
       <td>11.8667</td>
       <td>Antigua and Barbuda</td>
-      <td>1980</td>
+      <td>2000</td>
       <td>5</td>
-      <td>11.40</td>
+      <td>13.65</td>
     </tr>
   </tbody>
 </table>
@@ -966,8 +967,8 @@ def lat_plot(country_list, year_begin, year_end, **kwargs):
 
 ```python
 countries = ["China", "India"]
-fig2 = lat_plot(countries, 1980, 1981)
-fig2.show()
+fig2 = lat_plot(countries, 2000, 2001)
+fig2.show() #output not shown because it took too long to run likely because of slow query/large amount to pull
 ```
 
 
@@ -1229,6 +1230,6 @@ def long_plot(country_list, year_begin, year_end, **kwargs):
 
 ```python
 countries = ["China", "India"]
-fig3 = lat_plot(countries, 1990, 1991)
-fig3.show()
+fig3 = long_plot(countries, 2000, 2001)
+fig3.show() #output not shown because it took too long to run likely because of slow query/large amount to pull
 ```
