--- a/_posts/2021-10-15-blog_post_1.md
+++ b/_posts/2021-10-15-blog_post_1.md
@@ -1,3 +1,7 @@
+#Blog Post 1: High Quality Visualizations
+
+Hey there! Today, we're going to learn how to make some really pretty data visualizations using databases and some data wrangling. We'll be going over some of the skills Professor Chodrow went over in class, such as geoviz, SQL, and using more advanced Python techniques! Let's get into it.
+
 ## §1. Create a Database
 
 First, we open a database and name it `climate`. This database will be filled with data about temperatures, stations, and countries. 
