tried to fix title on fig1

--- a/_posts/2021-10-15-blog_post_1.md
+++ b/_posts/2021-10-15-blog_post_1.md
@@ -1,4 +1,4 @@
-#Blog Post 1: High Quality Visualizations
+# Blog Post 1: High Quality Visualizations
 
 Hey there! Today, we're going to learn how to make some really pretty data visualizations using databases and some data wrangling. We'll be going over some of the skills Professor Chodrow went over in class, such as geoviz, SQL, and using more advanced Python techniques! Let's get into it.
 
@@ -764,7 +764,7 @@ fig = temperature_coefficient_plot("Norway", 1980, 2020, 1,
 
 fig.show()
 ```
-{% include BP1_norweigian_stations.html %}
+{% include BP1_norweigian_stations1.html %}
 
 Now, we can save our plot as an `html` file using the `write_html` library from `plotly`!
 
