added new plot wiht working title

--- a/_posts/2021-10-15-blog_post_1.md
+++ b/_posts/2021-10-15-blog_post_1.md
@@ -764,7 +764,7 @@ fig = temperature_coefficient_plot("Norway", 1980, 2020, 1,
 
 fig.show()
 ```
-{% include BP1_norweigian_stations1.html %}
+{% include BP1_norweigian_stations.html %}
 
 Now, we can save our plot as an `html` file using the `write_html` library from `plotly`!
 
