--- a/_posts/2021-10-31-blog-post-3.md
+++ b/_posts/2021-10-31-blog-post-3.md
@@ -128,7 +128,8 @@ Per Professor Chodrow's recommendation, we  had  this `extend` to our `base.html
 
 Here's how I did it!
 
-```{% extends 'base.html' %}
+```html
+{% extends 'base.html' %}
 
 {% block header %}
   <h1>{% block title %}Submit a Message:{% endblock %}</h1>
@@ -160,7 +161,7 @@ Here's how I did it!
 
 `base.html` is a file that serves as our main page that we deal with in terms instantiating the UI. We incorporate the `styles.css` file here to have our customization show!
 
-```
+```html
 <!doctype html>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 <body background="swaggy_p.jpeg"></body>
@@ -183,7 +184,8 @@ Here's how I did it!
 ```
 #### `view.html`
 We use `view.html` to  view the message table, which also links to `random_messages()`! I wrote a function so that we can use `render_template()` for our template page. Per Professor Chodrow, I also set a cap at 5 for the number of entries allowed to be shown. 
-```
+
+```html
 {% extends 'base.html' %}
 
 {% block header %}
@@ -208,7 +210,8 @@ For the styling,  I used `styles.css` file to customize the color, font color, a
 
 I wanted to have a picture of Swaggy P, aka Nick Young, in it, but unfortunately could not get it to work. I will try this out later.
 
-```body {
+```css
+body {
   background-color: powderblue;
 }
 
@@ -233,7 +236,8 @@ label {
   font-size: 14px;
   font-style: italic;
   color: rgb(52, 135, 163);
-}```
+}
+```
 
 Here's the final outcome!
 
