added images file path

--- a/_posts/2021-11-3-blog-post-4.md
+++ b/_posts/2021-11-3-blog-post-4.md
@@ -47,7 +47,7 @@ plt.scatter(X[:,0], X[:,1])
 
 
     
-![png](output_3_1.png)
+![output_3_1.png](/images/output_3_1.png)
     
 
 
@@ -71,7 +71,7 @@ plt.scatter(X[:,0], X[:,1], c = km.predict(X))
 
 
     
-![png](output_5_1.png)
+![output_5_1.png](/images/output_5_1.png)
     
 
 
@@ -94,7 +94,7 @@ plt.scatter(X[:,0], X[:,1])
 
 
     
-![png](output_7_1.png)
+![output_7_1.png](/images/output_7_1.png)
     
 
 
@@ -114,7 +114,7 @@ plt.scatter(X[:,0], X[:,1], c = km.predict(X))
 
 
     
-![png](output_8_1.png)
+![output_8_1.png](/images/output_8_1.png)
     
 
 
@@ -525,7 +525,7 @@ plt.scatter(X[:,0], X[:,1], c = colorKey)
 
 
     
-![png](output_29_1.png)
+![output_29_1.png](/images/output_29_1.png)
     
 
 
@@ -588,7 +588,7 @@ plt.scatter(X[:,0], X[:,1], c = colorKey)
 
 
     
-![png](output_31_1.png)
+![output_31_1.png](/images/output_31_1.png)
     
 
 
@@ -664,7 +664,7 @@ plt.scatter(X[:,0], X[:,1], c=labs)
 
 
     
-![png](output_35_1.png)
+![output_35_1.png](/images/output_35_1.png)
     
 
 
@@ -688,7 +688,7 @@ plt.scatter(X[:,0], X[:,1], c=labs)
 
 
     
-![png](output_36_1.png)
+![output_36_1.png](/images/output_36_1.png)
     
 
 
@@ -716,7 +716,7 @@ plt.scatter(X[:,0], X[:,1], c=circ)
 
 
     
-![png](output_38_1.png)
+![output_38_1.png](/images/output_38_1.png)
     
 
 
@@ -736,7 +736,7 @@ plt.scatter(X[:,0], X[:,1], c = km.predict(X))
 
 
     
-![png](output_39_1.png)
+![output_39_1.png](/images/output_39_1.png)
     
 
 
@@ -762,7 +762,7 @@ plt.scatter(X[:,0], X[:,1], c=circ)
 
 
     
-![png](output_41_1.png)
+![output_41_1.png](/images/output_41_1.png)
     
 
 
@@ -784,7 +784,7 @@ plt.scatter(X[:,0], X[:,1], c=circ)
 
 
     
-![png](output_42_1.png)
+![output_42_1.png](/images/output_42_1.png)
     
 
 
@@ -806,7 +806,7 @@ plt.scatter(X[:,0], X[:,1], c=circ)
 
 
     
-![png](output_43_1.png)
+![output_43_1.png](/images/output_43_1.png)
     
 
 
@@ -828,7 +828,7 @@ plt.scatter(X[:,0], X[:,1], c=circ)
 
 
     
-![png](output_44_1.png)
+![output_44_1.png](/images/output_44_1.png)
     
 
 
