--- a/_posts/2021-11-25-blog-post-6.md
+++ b/_posts/2021-11-25-blog-post-6.md
@@ -570,7 +570,8 @@ Also, we want to reduce inefficiencies. Therefore, we can use the [Functional AP
 
 ```python
 #model constrution: inspired by lecture notes
-combined_features = layers.concatenate([title_features, text_features], axis= 1) #column-wise concatenation for our layer
+# Merge all available features into a single large vector via concatenation
+combined_features = layers.concatenate(axis= 1, [title_features, text_features]) #column-wise concatenation for our layer
 combined_input = [title_input, text_input]
 combined_features = layers.Dense(32, activation='relu')(combined_features)
 combined_output = layers.Dense(1, name = "fake")(combined_features)
